--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@
     font-weight: bold;
 }
 
-.btn:hover {
+.btn:hover,
+.modified-btn:hover {
     cursor: pointer;
     box-shadow: 0 2px 5px #423F3E;
     border: 1px solid black;
@@ -46,4 +47,17 @@
     border-radius: 10px;
     font-size: 50px;
     margin-top: 10px;
+}
+
+/*modification*/
+
+.modified-btn {
+    height: 45px;
+    width: 70px;
+    font-size: 20px;
+    background-color: #FFCB42;
+    color: white;
+    border-radius: 10px;
+    border: 2px solid white;
+    font-weight: bold;
 }
